force-app/main/default/objects/Switchee_Energy_Reading__c/Switchee_Energy_Reading__c.object-meta.xml
<CustomObject>
    <label>Switchee Energy Reading</label>
    <pluralLabel>Switchee Energy Readings</pluralLabel>
    <description>Daily meter clamp reading — solar generation and whole-home energy consumption</description>
    <nameField>
        <label>Reading Number</label>
        <type>AutoNumber</type>
        <displayFormat>SER-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>