force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Context_Date__c.field-meta.xml
<CustomField>
    <fullName>Context_Date__c</fullName>
    <label>Context Date</label>
    <type>Date</type>
</CustomField>