force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Cumulative_kWh__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_kWh__c</fullName>
    <label>Cumulative kWh</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>4</scale>
</CustomField>