force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Delta_kWh__c.field-meta.xml
<CustomField>
    <fullName>Delta_kWh__c</fullName>
    <label>Delta kWh</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>4</scale>
</CustomField>