force-app/main/default/objects/Switchee_Energy_Reading__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External Key</label>
    <type>Text</type>
    <length>100</length>
</CustomField>