force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <label>Insight</label>
    <type>Lookup</type>
    <referenceTo>Switchee_Insight__c</referenceTo>
    <relationshipName>Switchee_Energy_Readings</relationshipName>
    <relationshipLabel>Switchee Energy Readings</relationshipLabel>
</CustomField>