force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type__c</fullName>
    <label>Meter Type</label>
    <type>Text</type>
    <length>20</length>
</CustomField>