force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <label>Property Location</label>
    <type>Lookup</type>
    <referenceTo>Location</referenceTo>
    <relationshipName>Switchee_Energy_Readings</relationshipName>
    <relationshipLabel>Switchee Energy Readings</relationshipLabel>
</CustomField>