force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Property_UID__c.field-meta.xml
<CustomField>
    <fullName>Property_UID__c</fullName>
    <label>Property UID</label>
    <type>Text</type>
    <length>50</length>
</CustomField>