force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>