force-app/main/default/objects/Switchee_Energy_Reading__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <type>Text</type>
    <length>50</length>
</CustomField>